[package]
name = "mindstorm_serial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = {version="0.5"}
log = {version="0.4.11"}
serde_json="1.0"
serde = { version = "1.0", features = ["derive"] }
serialport = "4.1.0"
env_logger = {version="0.7.1"}